# 2.0

./: .gitignore  AGENTS.md  CLAUDE.md  Ejecutar.txt  Estratregia relajación.txt  Kivy app_legacy  Kivy_legacy.7z  LICENSE.txt  README.md  README.txt  README_STREAMLIT.md  REVISION_TAB_GUIDE.md  VERANO26.json  adaptive_iterations.py  adjustment_utils.py  advanced_distribution_engine.py  app_streamlit.py  backtracking_manager.py  balance_validator.py  change_tracker.py  collaboration_manager.py  constraint_checker.py  data_manager.py  demand_forecaster.py  dynamic_priority_manager.py  exceptions.py  exporters.py  generate_keys.py  historical_data_manager.py  hook_streamlit.py  incremental_updater.py  installer_script.iss  iterative_optimizer.py  license_manager.py  live_validator.py  main.py  operation_prioritizer.py  optimization_metrics.py  pdf_exporter.py  performance_cache.py  (+31 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: README.txt  VERANO26.json  ejecutar.md  relaxation_strategy.md
historical_data/: consolidated_history.json  schedule_data_20260711_172322.json  schedule_data_20260711_172328.json  schedule_data_20260711_173054.json
packaging/: hook-orjson.py  hook_streamlit.py  rthook_streamlit.py  run_app.spec
src/saldo27/: __init__.py  adaptive_iterations.py  adjustment_utils.py  advanced_distribution_engine.py  app_streamlit.py  balance_validator.py  bridge_manager.py  change_tracker.py  constraint_checker.py  data_manager.py  demand_forecaster.py  event_bus.py  exceptions.py  final_adjustment_engine.py  generate_keys.py  historical_data_manager.py  incremental_updater.py  iterative_optimizer.py  license_manager.py  live_validator.py  operation_prioritizer.py  optimization_metrics.py  pdf_exporter.py  performance_cache.py  predictive_analytics.py  predictive_optimizer.py  prior_schedule_handler.py  progress_monitor.py  real_time_engine.py  run_app.py  schedule_analyzer.py  schedule_builder.py  scheduler.py  scheduler_config.py  scheduler_core.py  shift_tolerance_validator.py  statistics_calculator.py  strict_balance_optimizer.py  utilities.py  worker_eligibility.py
tests/: conftest.py  test_balance_validator.py  test_bridge_manager.py  test_change_tracker.py  test_event_bus.py  test_exceptions.py  test_final_adjustment_engine.py  test_performance_cache.py  test_scheduler.py  test_scheduler_config.py  test_scheduler_core.py  test_utilities.py
tests/e2e/: conftest.py  test_app_loads.py  test_schedule_generation.py  test_worker_management.py
