[project]
name = "saldo27"
version = "2.5.0"
description = "Sistema de generación de horarios para trabajadores"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }

dependencies = [
    # Streamlit Web Application
    "streamlit>=1.28.0",
    "altair>=5.0.0",

    # Machine Learning & Analytics
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",

    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",

    # PDF Generation & Processing
    "reportlab>=4.0.0",
    "pdfplumber>=0.10.0",

    # Excel Processing
    "openpyxl>=3.1.0",

    # Date/Time utilities
    "python-dateutil>=2.8.0",

    # HTTP
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.6.2",
]

[project.scripts]
saldo27 = "saldo27.run_app:run_streamlit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saldo27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end browser tests (require playwright)",
]
