[project]
name = "saldo27"
version = "2.5.0"
description = "Sistema de generación de horarios para trabajadores"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }

dependencies = [
    # Streamlit Web Application
    "streamlit>=1.28.0",
    "altair>=5.0.0",

    # Machine Learning & Analytics
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",

    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",

    # PDF Generation & Processing
    "reportlab>=4.0.0",
    "pdfplumber>=0.10.0",

    # Excel Processing
    "openpyxl>=3.1.0",

    # Date/Time utilities
    "python-dateutil>=2.8.0",

    # HTTP
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.6.2",
    "ruff>=0.11",
    "ty>=0.0.1a7",
    "deptry>=0.22",
]

[project.scripts]
saldo27 = "saldo27.run_app:run_streamlit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saldo27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end browser tests (require playwright)",
]

# ── Ruff ────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long — handled by formatter
    "E402",    # module-import-not-at-top — used for conditional/lazy imports
    "B905",    # zip-without-strict — too noisy for existing code
    "SIM102",  # collapsible-if — readability preference in complex scheduling logic
    "SIM105",  # suppressible-exception — contextlib.suppress not always clearer
    "SIM108",  # ternary — readability preference
    "UP007",   # X | Y union syntax — keep Optional[] for 3.10 compat
    "RUF001",  # ambiguous unicode — Spanish text is intentional
    "RUF002",  # ambiguous unicode docstring — Spanish text
    "RUF003",  # ambiguous unicode comment — Spanish text
    "RUF013",  # implicit-optional — too noisy for existing signatures
]

[tool.ruff.lint.per-file-ignores]
# Existing source code — suppress noisy rules until incrementally cleaned up
"src/saldo27/*.py" = [
    "B007",    # unused-loop-control-variable — pervasive in scheduling loops
    "B023",    # function-uses-loop-variable — closures in builder callbacks
    "B904",    # raise-without-from — existing exception chains
    "E722",    # bare-except — existing broad exception handlers
    "E731",    # lambda-assignment — one instance, harmless
    "E741",    # ambiguous-variable-name — single 'l' variable
    "F401",    # unused-import — try/except availability checks
    "F811",    # redefined-while-unused — duplicate method in schedule_builder
    "F841",    # unused-variable — pervasive in existing code
    "SIM103",  # needless-bool — readability preference
    "SIM109",  # compare-with-tuple — minor style
    "SIM110",  # reimplemented-builtin — one any() candidate
    "SIM115",  # open-file-with-context-handler — existing pattern
    "SIM118",  # in-dict-keys — .keys() calls
    "RUF005",  # collection-literal-concatenation
    "RUF059",  # unused-unpacked-variable
]

[tool.ruff.lint.isort]
known-first-party = ["saldo27"]

[tool.ruff.format]
docstring-code-format = true

# ── ty ──────────────────────────────────────────────────────────────

[tool.ty.src]
include = ["src", "tests"]

# ── deptry ──────────────────────────────────────────────────────────

[tool.deptry]
[tool.deptry.per_rule_ignores]
# altair is a transitive streamlit dep we pin explicitly for compatibility
# matplotlib is imported conditionally inside functions
# python-dateutil is used by pandas and dateutil.parser at runtime
DEP002 = ["altair", "matplotlib", "python-dateutil"]
